--- a/indexScan.html
+++ b/indexScan.html
@@ -9,8 +9,8 @@
     <meta name="description" content="" />
     <meta name="author" content="Christoph Oberhofer" />
 
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=no" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <!-- <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=no" /> -->
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 
 <body>
@@ -20,25 +20,15 @@
             <h2>An advanced barcode-scanner written in JavaScript</h2>
         </div>
     </header>
-    <section id="container" class="container">
+    <p>Barcode Result : </p>
+    <div id="divBarcode"></div>
+    <div id='barcode-scanner' style="width:600px; height:5000px;"></div>
 
-
-        <div id="result_strip">
-            <ul class="thumbnails"></ul>
-            <ul class="collector"></ul>
-        </div>
-        <div id="interactive" class="viewport"></div>
-    </section>
-    <footer>
-        <p>
-            &copy; Made with ❤️ by Christoph Oberhofer
-        </p>
-    </footer>
 
     <script src="jquery.min.js" type="text/javascript"></script>
     <script src="adapter-latest.js" type="text/javascript"></script>
     <script src="quagga.js" type="text/javascript"></script>
-    <script src="live_w_locator.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 
 </html>
